--- a/package.json
+++ b/package.json
@@ -13,5 +13,17 @@
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
-  }
+  },
+  "description": "Simple static site generator",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nathan-j-brenner/static-charge.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nathan-j-brenner/static-charge/issues"
+  },
+  "homepage": "https://github.com/nathan-j-brenner/static-charge#readme"
 }
