--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.12.2",
     "jade": "~1.9.2",
     "marked": "^0.3.3",
+    "moment": "^2.10.3",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   },
